fixed background image alignment issue for the BossPage

--- a/src/styles/_bossPage.scss
+++ b/src/styles/_bossPage.scss
@@ -84,7 +84,7 @@
         #bossSection {
             width: 70vw;
             justify-self: center;
-            background-position: 1;
+            background-position: 0;
         }
         #stats {
             width: 40%;
